`Fixed Stepper Title Alignment.

--- a/src/main/resources/gwt/material/design/addins/client/stepper/resources/css/stepper.css
+++ b/src/main/resources/gwt/material/design/addins/client/stepper/resources/css/stepper.css
@@ -39,6 +39,7 @@
 .stepper .title {
     line-height: 32px;
     font-weight: 500;
+    margin-left: 0px;
 }
 .stepper .body {
     padding-bottom: 28px;
